feat(movies): add pagination, search, filtering, and sorting